# robust_adaptive_linear_learners

./: CMakeLists.txt  README.md  config_2  exp_RMSProp.cpp  exp_nadaline.cpp  experiment_1_0.json  experiment_3_1.json  experiment_5_3.json  experiment_7_1.json  experiment_7_8.json  experiment_8_1.json  linear_learner_SigIDBD.cpp  linear_mnist.cpp  robust_linear_learner.cpp  run.py  run_exp.sh
experiment_configs/: experiment_1_1.json  experiment_1_2.json  experiment_2.json  experiment_3_2.json  experiment_4.json  experiment_5_0.json  experiment_5_1.json  experiment_5_2.json  experiment_5_4.json  experiment_6.json  experiment_7.json  experiment_7_2.json  experiment_7_3.json  experiment_7_4.json  experiment_8_1.json  experiment_8_2.json  experiment_9_1.json  experiment_9_2.json  experiment_9_3.json  experiment_adagrad.json  experiment_config.json  experiment_go_top.json  experiment_idbdsigmoid.json  experiment_mnist.json  experiment_mnist_baselines.json  experiment_mnist_meta_step_sizes.json  experiment_mnist_nidbd3.json  experiment_mnist_nidbd_initial_step_sizes.json
include/: idbd_variants.h  learner.h  network_factory.h
include/environments/: mnist_tracking.h  supervised_tracking.h
include/experiment/: Experiment.h
notebooks/: Adagrad.ipynb  RMSProp.ipynb  RobustLinearLearner.ipynb
src/: RMSPropLMS.cpp  idbd_variants.cpp  learner.cpp
src/environments/: mnist_tracking.cpp  supervised_tracking.cpp
src/experiment/: Database.cpp  Experiment.cpp  Metric.cpp
